--- a/src/app/pages/client-list/client-list.component.html
+++ b/src/app/pages/client-list/client-list.component.html
@@ -1,5 +1,8 @@
 <p>Primeira Pagina Cliente</p>
 
-<div *ngIf="clientePremium">
+<div>
     <h2>Você é um cliente premium tem acesso a informações diferenciadas</h2>
+    <ul *ngFor="let client of clients">
+        <li><a [routerLink]="['/client', client.id]">{{client.nome}}</a></li>
+    </ul>
 </div>
